TEST_PROGRAMS/INVALID/04/33.go
package main

func main() {
    //Illegal array type
    var x [1.5]a
}
